# better-youdub

./: .env.example  .gitignore  .gitmodules  README.md  compose.dev.yml  compose.gpu.yml  config.example.json  pyproject.toml  set_codex.sh
.agents/skills/youdub-linux-migration/: SKILL.md
.agents/skills/youdub-webui-low-bandwidth/: SKILL.md
.agents/skills/youdub-webui-low-bandwidth/agents/: openai.yaml
codex-container/: Dockerfile
docker/: app.cpu.Dockerfile  app.gpu.Dockerfile
docs/: README.md  assessment.md  container-strategy.md  dependency-sync.md  migration-sop.md  task-concurrency-and-publish-audit.md  translation-design.md  tts-redub-plan.md
requirements/: base.txt  gpu.txt  torch-constraints.txt
scripts/: check_env.sh  check_gpu.sh  docker-entrypoint.sh  gpu_smoke.sh  smoke.sh
src/youdub/: __init__.py  cli.py  config.py  constants.py  downloader.py  gpu.py  ingest.py  locking.py  media.py  models.py  pipeline.py  publishing.py  runtime.py  storage.py  subtitles.py  synthesis.py  task_config.py  transcription.py  translation.py  tts.py  tts_quality.py  tts_redub.py  web.py
src/youdub/web_static/: app.js  index.html  styles.css
tests/: test_cli.py  test_config.py  test_downloader.py  test_gpu.py  test_ingest.py  test_locking.py  test_media.py  test_pipeline.py  test_publishing.py  test_storage.py  test_subtitles.py  test_synthesis.py  test_task_config.py  test_transcription.py  test_translation.py  test_tts.py  test_tts_quality.py  test_web.py
