[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "youdub-linux"
version = "0.1.0"
description = "Linux/container-native scaffold for a video localization pipeline"
requires-python = ">=3.10"
dependencies = [
  "audiostretchy",
  "opencc-python-reimplemented>=0.1.7",
  "openai>=1.30.0",
  "bilibili-api-python==17.4.1",
  "yt-dlp",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
youdub = "youdub.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
