[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "youdub-linux"
version = "0.1.0"
description = "Linux/container-native scaffold for a video localization pipeline"
requires-python = ">=3.10"
dependencies = [
  "audiostretchy",
  "opencc-python-reimplemented>=0.1.7",
  "openai>=1.30.0",
  "socksio>=1.0.0",
  "aiohttp==3.13.2",
  "aiohttp-socks==0.11.0",
  "yt-dlp",
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
youdub = "youdub.cli:main"
youdub-web = "youdub.web:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
youdub = ["web_static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
